--- a/user-service/src/main/resources/templates/login.html
+++ b/user-service/src/main/resources/templates/login.html
@@ -1,11 +1,12 @@
-<html lang="en">
+<!DOCTYPE html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
   <meta name="author" content="">
   <title>Please sign in</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" th:href="@{/css/style.css}">
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css"
         rel="stylesheet"
         integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M"
@@ -14,42 +15,15 @@
         crossorigin="anonymous">
 </head>
 <body>
-<div class="container" style="display: flex;
-    width: 100%;
-    max-width: 1920px;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin-bottom: 70px;">
-  <h2 class="form-signin-heading" style="width: 100%;
-    height: 8px;
-    border: none;
-    outline: none;
-    padding: 0;
-    font-family: 'Inter', sans-serif;
-    font-size: 1.8rem;
-    font-style: normal;
-    font-weight: 500;
-    line-height: normal;
-    text-align: center;">Войдите, чтобы продолжить</h2>
+<div class="container">
+  <h2 class="form-signin-heading">Войдите, чтобы продолжить</h2>
 
-  <div class="logos" style="
-  margin-top: 50px;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  border: 3px solid #000;
-  border-radius: 10px;
-  width: 350px;
-  height: 250px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-around;">
+  <div class="logos" >
     <a href="/oauth2/authorization/github">
-      <img src="SigninwithGithubButton.png" alt="Sign in with GitHub" style="width: 300px; height: 50px;"/>
+      <img th:src="@{/images/SigninwithGithubButton.png}" alt="Sign in with GitHub"/>
     </a>
     <a href="/oauth2/authorization/google">
-      <img src="SigninwithGoogleButton.png" alt="Sign in with Google" style="width: 300px; height: 50px;"/>
+      <img th:src="@{/images/SigninwithGoogleButton.png}" alt="Sign in with Google"/>
     </a>
   </div>
 </div>
