--- a/web/cdc/src/components/Employees/employees.module.css
+++ b/web/cdc/src/components/Employees/employees.module.css
@@ -785,6 +785,7 @@
 .buttonTeamsGroups,
 .buttonMentorship {
     display: flex;
+    flex-direction: row-reverse;
     width: 100%;
     height: 40px;
     justify-content: center;
