--- a/web/cdc/src/components/Teams/teams.module.css
+++ b/web/cdc/src/components/Teams/teams.module.css
@@ -847,6 +847,17 @@
     background-color: #FFFFFF;
 }
 
+.popUp p {
+    text-align: left;
+    font-family: 'Inter', sans-serif;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+
+    margin: 0
+}
+
 .popUpMask {
     width: 100%;
     height: 100%;
@@ -924,6 +935,13 @@
     justify-content: center;
     align-items: center;
     gap: 10px;
+
+    color: #000;
+    font-family: 'Inter', sans-serif;
+    font-size: 2rem;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
 
     background: none;
     border-radius: 10px;
