--- a/web/cdc/src/components/Teams/teams.module.css
+++ b/web/cdc/src/components/Teams/teams.module.css
@@ -847,6 +847,17 @@
     background-color: #FFFFFF;
 }
 
+.popUp p {
+    text-align: left;
+    font-family: 'Inter', sans-serif;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+
+    margin: 0
+}
+
 .popUpMask {
     width: 100%;
     height: 100%;
@@ -879,6 +890,20 @@
     white-space: nowrap;
 }
 
+textarea { resize: none; }
+
+.popUpContentTextArea {
+    display: flex;
+    /* width: 100%; */
+    height: 150px;
+    padding: 0 10px;
+    align-items: center;
+    gap: 10px;
+    flex-shrink: 0;
+    border-radius: 10px;
+    border: 2px solid #000;
+}
+
 .popUpContent form {
     display: flex;
     /* width: 100%; */
@@ -892,6 +917,20 @@
 }
 
 .popUpContent form input {
+    width: 100%;
+    height: 32px;
+    border: none;
+    outline: none;
+    padding: 0;
+
+    font-family: 'Inter', sans-serif;
+    font-size: 2rem;
+    font-style: normal;
+    font-weight: 300;
+    line-height: normal;
+}
+
+.popUpContent form textarea {
     width: 100%;
     height: 32px;
     border: none;
@@ -924,6 +963,13 @@
     justify-content: center;
     align-items: center;
     gap: 10px;
+
+    color: #000;
+    font-family: 'Inter', sans-serif;
+    font-size: 2rem;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
 
     background: none;
     border-radius: 10px;
